calicoctl/test-data/convert/output/k8s/k8s-networkpolicy-multiple-list.json
{
  "kind": "List",
  "apiVersion": "v1",
  "metadata": {},
  "items": [
    {
      "kind": "NetworkPolicy",
      "apiVersion": "projectcalico.org/v3",
      "metadata": {
        "name": "allow-all-egress",
        "namespace": "default",
        "creationTimestamp": null
      },
      "spec": {
        "order": 1000,
        "egress": [
          {
            "action": "Allow",
          }
        ],
        "selector": "projectcalico.org/orchestrator == 'k8s'",
        "types": [
          "Egress"
        ]
      }
    },
    {
      "kind": "NetworkPolicy",
      "apiVersion": "projectcalico.org/v3",
      "metadata": {
        "name": "default-deny-ingress",
        "namespace": "default",
        "creationTimestamp": null
      },
      "spec": {
        "order": 1000,
        "selector": "projectcalico.org/orchestrator == 'k8s'",
        "types": [
          "Ingress"
        ]
      }
    },
    {
      "kind": "NetworkPolicy",
      "apiVersion": "projectcalico.org/v3",
      "metadata": {
        "name": "test-network-policy1",
        "namespace": "test-ns",
        "creationTimestamp": null
      },
      "spec": {
        "order": 1000,
        "ingress": [
          {
            "action": "Allow",
            "protocol": "TCP",
            "source": {
              "nets": [
                "172.17.0.0/16"
              ],
              "notNets": [
                "172.17.1.0/24"
              ]
            },
            "destination": {
              "ports": [
                6379
              ]
            }
          },
          {
            "action": "Allow",
            "protocol": "TCP",
            "source": {
              "selector": "projectcalico.org/orchestrator == 'k8s'",
              "namespaceSelector": "project == 'myproject'"
            },
            "destination": {
              "ports": [
                6379
              ]
            }
          },
          {
            "action": "Allow",
            "protocol": "TCP",
            "source": {
              "selector": "projectcalico.org/orchestrator == 'k8s' \u0026\u0026 role == 'frontend'"
            },
            "destination": {
              "ports": [
                6379
              ]
            }
          }
        ],
        "egress": [
          {
            "action": "Allow",
            "protocol": "TCP",
            "destination": {
              "nets": [
                "10.0.0.0/24"
              ],
              "ports": [
                5978
              ]
            }
          }
        ],
        "selector": "projectcalico.org/orchestrator == 'k8s' \u0026\u0026 role == 'db'",
        "types": [
          "Ingress",
          "Egress"
        ]
      }
    }
  ]
}
